bitbucket-pipelines.yml edited online with Bitbucket Added uglify and clean CSS scripts

--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,3 +21,11 @@ pipelines:
 
             # Run code quality checks
             - htmlhint "**/*.html"
+            
+      - step:
+          name: Optimize JS and CSS
+          script:
+            # Minify JavaScript and CSS files
+            - npm install
+            - npm run optimize
+  
