--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -14,13 +14,16 @@ pipelines:
     # Pipeline for the dev branch (development environment)
     dev:
       - step:
-          name: Check Code Quality
+          name: Check Code Quality (HTML & JavaScript)
           script:
-            # Install dependencies needed for code quality checks
+            # Install dependencies needed for HTML and JavaScript code quality checks
             - npm install --global eslint
 
-            # Run code quality checks for HTML files using eslint-plugin-html
-            - eslint --plugin html --ext .html .
+            # Run ESLint for JavaScript files
+            - eslint "**/*.js"
+
+            # Run HTML linting
+            - eslint "**/*.html"
             
       - step:
           name: Optimize JS and CSS
