--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,12 @@
 {
   "plugins": ["html"],
   "extends": ["eslint:recommended"],
+  "parserOptions": {
+      "ecmaVersion": 6
+  },
+  "env": {
+    "browser": true
+  },
   "rules": {
       // Enforce the use of semicolons at the end of statements
       "semi": ["error", "always"],
@@ -8,8 +14,6 @@
       "init-declarations": "error",
       // Flag unused variables
       "no-unused-vars": "error",
-      // Disallow trailing whitespace at the end of lines
-      "no-trailing-spaces": "error",
       // Disallow unused parameters in functions
       "no-unused-vars": ["error", { "args": "none" }]
   }
