--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -21,6 +21,7 @@ pipelines:
           script:
             # Install dependencies needed for HTML and JavaScript code quality checks
             - npm install --global eslint eslint-plugin-node
+            - npm install eslint-plugin-node@latest
 
             # Run ESLint for JavaScript files
             - eslint . --ext .js --ignore-pattern '*.min.js'
